rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/RCA_ApprovalWorkItemQuote__c.object-meta.xml
<CustomObject>
    <label>Approval Work Item Quote</label>
    <pluralLabel>Approval Work Item Quotes</pluralLabel>
    <nameField>
        <displayFormat>AWIQ-{00000}</displayFormat>
        <label>Approval Work Item Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking Approval Work Items to Quote records for enhanced reporting capabilities. Overcomes the polymorphic RelatedRecordId limitation in standard ApprovalWorkItem reporting. Security is controlled by the parent Quote record.</description>
</CustomObject>