rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_ApprovalWorkItemId__c.field-meta.xml
<CustomField>
    <fullName>RCA_ApprovalWorkItemId__c</fullName>
    <externalId>true</externalId>
    <label>Approval Work Item ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <description>Stores the Approval Work Item ID. External ID field for linking to ApprovalWorkItem records.</description>
</CustomField>