rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_AssignedGroup__c.field-meta.xml
<CustomField>
    <fullName>RCA_AssignedGroup__c</fullName>
    <label>Assigned Group</label>
    <description>Queue/Group name assigned to the approval work item. Populated when ApprovalWorkItem.AssignedToId points to a non-User (e.g., Queue).</description>
    <length>80</length>
    <type>Text</type>
</CustomField>