rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_AssignedToId__c.field-meta.xml
<CustomField>
    <fullName>RCA_AssignedToId__c</fullName>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Approval Work Items</relationshipLabel>
    <relationshipName>AssignedApprovalWorkItems</relationshipName>
    <type>Lookup</type>
    <description>User assigned to the approval work item. Copied from ApprovalWorkItem.AssignedToId for reporting purposes. For Queue/Group assignees this lookup remains blank; see RCA_AssignedGroup__c for the group name.</description>
</CustomField>