rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_Label__c.field-meta.xml
<CustomField>
    <fullName>RCA_Label__c</fullName>
    <label>Approval Chain Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Approval chain name from the approval work item. Copied from ApprovalWorkItem.ApprovalChainName for reporting purposes.</description>
</CustomField>