rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_Quote__c.field-meta.xml
<CustomField>
    <fullName>RCA_Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Approval Work Item Quotes</relationshipLabel>
    <relationshipName>ApprovalWorkItemQuotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Master-Detail relationship to Quote. Junction records inherit Quote security and are deleted when Quote is deleted. This enables comprehensive reporting on Quote approvals.</description>
</CustomField>