rca-aa-reports/main/default/objects/RCA_ApprovalWorkItemQuote__c/fields/RCA_Status__c.field-meta.xml
<CustomField>
    <fullName>RCA_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Approval work item status. Copied from ApprovalWorkItem.Status for reporting purposes.</description>
</CustomField>